--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -110,17 +110,16 @@
             }
           }
           &:after {
-            opacity: .75;
+            opacity: .55;
             position: absolute;
             display: block;
-            content: '';
+            content: "";
             width: 100%;
             height: 100%;
             top: 0;
             left: 0;
             backdrop-filter: blur(1px);
-            background: lighten($background, 10%);
-            box-shadow: inset 0 0 20px #272727, inset 0 0 50px hsla(0, 0%, 12%, 1);
+            background: #ffffff;
           }
         }
         .arrow {
