--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -56,8 +56,8 @@
         height: 100%;
 
         .pix {
-          width: 25%;
-          height: 20%;
+          width: 20%;
+          height: 25%;
           padding: 4px;
 
           .pix-container {
@@ -337,10 +337,24 @@
 @media screen and (max-width: 750px) {
   .stock-wrapper {
     .main {
+      .user-info {
+        padding: 0 16px;
+        .user-info-avatar {}
+        .user-info-main {
+          margin-left: 15px;
+          .name {
+            font: 500 16px/18px $fontMain;
+          }
+          .album-size {
+            font: 500 54px/60px Roboto,sans-serif;
+            margin-top: 5px;
+          }
+        }
+      }
       .gallery {
         .pixies {
           .pix {
-            width: 33%;
+            width: 50%;
             height: 25%;
           }
         }
