--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -27,6 +27,23 @@
         object-position: 50%;
       }
 
+      .close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        width: 24px;
+        height: 24px;
+        mask-image: url('../../../../assets/images/close.svg');
+        mask-size: 100%;
+        transition: background 200ms;
+        background: $background;
+
+        &:hover {
+          background: lighten($dark, 10%);
+        }
+      }
+
       .slide {
         position: absolute;
         cursor: pointer;
@@ -78,22 +95,18 @@
         }
       }
 
-      .close {
+      .panel-bot {
         position: absolute;
-        top: 20px;
-        right: 20px;
-        cursor: pointer;
-        width: 24px;
-        height: 24px;
-        mask-image: url('../../../../assets/images/close.svg');
-        mask-size: 100%;
-        transition: background 200ms;
-        background: $background;
-
-        &:hover {
-          background: lighten($dark, 10%);
+        bottom: 0;
+        width: 100%;
+        height: 40px;
+        .number {
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
+
     }
   }
 }
