ui viewer update

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -12,7 +12,7 @@
         <span></span>
       </div>
       <div class="panel-bot">
-        <div class="number">{{viewerPix.albumPixNumber}}</div>
+        <div class="number">{{viewerPix.album_pix_number}}</div>
       </div>
     </div>
   </div>
