ui viewer update

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="close" *ngIf="controlsViewed" (click)="closeHandler()"></div>
       <div class="panel-bot">
-        <div class="number">{{viewerPix.num_current}} / {{viewerPix.num_total}}</div>
+        <div class="number">{{viewerPix.num_current}} of {{viewerPix.num_total}}</div>
       </div>
     </div>
   </div>
