--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -100,11 +100,11 @@
         width: 100%;
         padding: 20px;
         .number {
-          padding: 8px 20px;
+          padding: 5px 10px;
           background: $background;
           border-radius: 8px;
-          font: 500 18px/20px $fontMain;
-          color: #252525;
+          font: 500 14px/20px $fontMain;
+          color: #cacaca;
         }
       }
 
