ui viewer update

--- a/ui/src/app/components/main/main.component.html
+++ b/ui/src/app/components/main/main.component.html
@@ -3,10 +3,10 @@
 >
   <app-header></app-header>
   <router-outlet></router-outlet>
-<!--  <div class="no-interaction-screen"-->
-<!--       *ngIf="sideBar.sideBars.length > 0"-->
-<!--       (click)="sideBarClose()"-->
-<!--       [@shadowInOut]-->
-<!--  ></div>-->
-<!--  <app-side-bar></app-side-bar>-->
+  <div class="no-interaction-screen"
+       *ngIf="sideBar.sideBars.length > 0"
+       (click)="sideBarClose()"
+       [@shadowInOut]
+  ></div>
+  <app-side-bar></app-side-bar>
 </div>
