--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -1,11 +1,8 @@
 <header>
-  <div class="settings" [routerLink]="['/']">
+  <a class="logo" [routerLink]="['/']">
+    PixCollector
+  </a>
+  <div class="settings" (click)="openMenu(SideBarTypes.MENU)">
     <span class="icon"></span>
-  </div>
-  <div class="profile" *ngIf="user">
-    <span class="album-size">total pix <br> <span class="val">{{user.albumSize}}</span></span>
-    <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
-      <img class="pix-img" src="{{user.avatar}}"/>
-    </a>
   </div>
 </header>
