--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -12,7 +12,19 @@ header {
   background: #2a2a2af2;
   transition: height 200ms ease-in-out;
 
-  .profile, .settings {
+  a.logo {
+    display: block;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    user-select: none;
+    font: 900 22px/26px $fontMain;
+    text-decoration: none;
+    color: $light;
+    padding: 0 10px;
+  }
+
+  .settings {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,51 +32,10 @@ header {
     outline: none;
     height: 100%;
     padding: 0 10px;
-    font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji",
-    Times, Symbola, Aegyptus, Code2000, Code2001, Code2002, Musica, serif, LastResort;
-    text-align: center;
+    // EMOJI font
+    //font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji",
+    //Times, Symbola, Aegyptus, Code2000, Code2001, Code2002, Musica, serif, LastResort;
 
-    .label, .user-name {
-      transition: font 200ms ease-in-out;
-      font: 500 14px/14px $fontMain;
-      color: $background;
-    }
-
-    .user-avatar {
-      width: 36px;
-      height: 36px;
-      border-radius: 20px;
-      overflow: hidden;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    .user-name {
-      cursor: auto;
-    }
-  }
-
-  .profile {
-    width: auto;
-    padding-left: 50px;
-    position: relative;
-    .album-size {
-      width: 60px;
-      margin-right: 10px;
-      font: 500 12px/18px $fontMain;
-      text-align: right;
-      color: $background;
-      .val {
-        font-size: 14px;
-        font-weight: 900;
-      }
-    }
-  }
-
-  .settings {
     .icon {
       display: block;
       width: 46px;
@@ -75,5 +46,23 @@ header {
       background-position: 50%;
       background-size: contain;
     }
+
+    .profile {
+      width: auto;
+      padding-left: 50px;
+      position: relative;
+      .user-avatar {
+        width: 36px;
+        height: 36px;
+        border-radius: 20px;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+
   }
 }
