ui header update, add sidebar + menu

--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <a class="logo" [routerLink]="['/']">
-    PixCollector
+    #PixCollector
   </a>
   <div class="settings" (click)="openMenu(SideBarTypes.MENU)">
     <span class="icon"></span>
