--- a/ui/src/app/components/main/stocks/stocks.component.html
+++ b/ui/src/app/components/main/stocks/stocks.component.html
@@ -1,4 +1,8 @@
 <div class="stock-wrapper">
+  <div class="title">Stocks</div>
+  <div class="sub-title">The space that bring all of the pix together.</div>
+  <div class="sub-title">Enjoy watching ur collection or explore users stocks - comment, like, save to ur stock and more.</div>
+  <div class="sub-title">Have fun!</div>
   <div class="stock">
     <div class="stock-card self" (click)="goToStock(id)">
       <div class="logo"> </div>
