--- a/ui/src/app/components/main/stocks/stocks.component.scss
+++ b/ui/src/app/components/main/stocks/stocks.component.scss
@@ -6,16 +6,30 @@
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
-  width: 100%;
+  width: 400px;
+  margin: 0 auto;
   padding-top: 52px;
-  .stock {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .title {
     width: 100%;
-    height: 100%;
+    margin-top: 40px;
+    font: 500 42px/44px $fontMain;
+    text-align: left;
+    color: $background;
+  }
+
+  .sub-title {
+    margin-top: 20px;
+    width: 100%;
+    font: 400 22px/24px $fontMain;
+    text-align: left;
+    color: $background;
+  }
+
+  .stock {
+    width: 100%;
+    margin-top: 60px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     .stock-card {
       cursor: pointer;
@@ -79,6 +93,11 @@
 
 @media screen and (max-width: 750px) {
   .stock-wrapper {
+    width: 320px;
+    .sub-title {
+      font: 400 18px/22px $fontMain;
+    }
+
     .stock {
       .stock-card {
         width: 110px;
