--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -69,7 +69,7 @@
           align-items: center;
           .name {
             position: absolute;
-            right: 20px;
+            width: 100%;
             font: 900 22px/24px $fontMain;
             color: #2f2f2f;
           }
@@ -170,6 +170,56 @@
             font: 900 46px/50px $fontMain;
             color: lighten($background, 25%);
             font-style: italic;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 750px) {
+  .chart-wrapper {
+    .chart {
+      .chart-card {
+        height: 80px;
+        padding: 0 0 0 12px;
+        .cc-avatar {
+          width: 60px;
+          height: 60px;
+        }
+
+        .cc-info-main {
+          width: 140px;
+          .row {
+            .name {
+              padding: 25px 0 0 20px;
+              font: 900 16px/20px $fontMain;
+            }
+            .album-size {
+              bottom: -46px;
+              font: 900 44px/100px $fontMain;
+            }
+          }
+        }
+
+        .cc-preview {
+          .arrow {
+            width: 120px;
+          }
+          span {
+            display: block;
+            position: absolute;
+            font: 900 142px/166px $fontMain;
+            color: #2f2f2f;
+            &.take {
+              right: 70px;
+              font: 900 22px/26px $fontMain;
+              color: #8e8e8e;
+            }
+            &.look {
+              font: 900 28px/30px $fontMain;
+            }
           }
         }
       }
