ui stocks update

--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -70,8 +70,9 @@
           .name {
             position: absolute;
             width: 100%;
-            font: 900 22px/24px $fontMain;
-            color: #2f2f2f;
+            padding-left: 30px;
+            font: 500 20px/22px $fontMain;
+            color: #232323;
           }
           .album-size {
             position: absolute;
