--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -195,6 +195,12 @@
                   }
                 }
               }
+              &.download {
+                &.no-one-selected {
+                  pointer-events: none;
+                  background: darken($background, 10%);
+                }
+              }
             }
           }
         }
