--- a/ui/src/assets/styles/common.scss
+++ b/ui/src/assets/styles/common.scss
@@ -35,6 +35,7 @@ body {
   outline: none;
   border-radius: 8px;
   cursor: pointer;
+  user-select: none;
   text-decoration: none;
   transition: background 100ms ease;
   box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
