API privacy upd UI sidebar menu upd

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -13,8 +13,8 @@
       download it all like one ZIP file
     </h2>
     <div class="button login" (click)="loginVk()">
-      <div class="label">Login with</div>
-      <div class="logo-vk"> </div>
+      <div class="btn-label">Login with</div>
+      <div class="btn-logo logo-vk"> </div>
     </div>
     <h3 class="made-by"><span class="code" role="img" aria-label="Made">👨‍💻</span> by Nikolai Koshkarov with <span class="love" role="img" aria-label="love">❤</span></h3>
     <app-footer></app-footer>
