--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -55,8 +55,17 @@
       color: $background;
     }
 
-    .row {
+    .sub-title {
+      width: 100%;
+      padding: 0 20px;
       margin-top: 20px;
+      font: 400 14px/20px $fontMain;
+      text-align: left;
+      color: $background;
+    }
+
+    .row {
+      margin-top: 10px;
       padding: 0 20px;
       font: 400 14px/20px $fontMain;
       text-align: left;
