API privacy upd UI sidebar menu upd

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -2,10 +2,12 @@
   <div class="main" *ngIf="state === StateEnum.auth">
     <div class="logo">
       <div class="svg"></div>
-      <div class="juice scale-up-ver-top-1"></div>
-      <div class="juice scale-up-ver-top-4"></div>
-      <div class="juice scale-up-ver-top-7"></div>
-      <div class="juice scale-up-ver-top-9"></div>
+      <div class="juice one"></div>
+      <div class="juice two"></div>
+      <div class="juice three"></div>
+      <div class="juice four"></div>
+      <div class="juice five"></div>
+      <div class="juice six"></div>
       <h1 class="title">COLLECTOR</h1>
     </div>
     <h2 class="subtitle">
