ui STORE test user put - update test

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -8,10 +8,10 @@
       <div class="juice four"></div>
       <div class="juice five"></div>
       <div class="juice six"></div>
-      <h1 class="title">COLLECTOR</h1>
+      <h1 class="title">PIXcollector</h1>
     </div>
     <h2 class="subtitle">
-      pixCollector provide to VK users ability to view their pictures from the saved folder and
+      #PIXcollector provide to VK users ability to view their pictures from the saved folder and
       download it all like one ZIP file
     </h2>
     <div class="button login" (click)="loginVk()">
@@ -25,11 +25,13 @@
   <div class="main" *ngIf="state === StateEnum.success">
     <div class="logo">
       <div class="svg"></div>
-      <div class="juice scale-up-ver-top-1"></div>
-      <div class="juice scale-up-ver-top-4"></div>
-      <div class="juice scale-up-ver-top-7"></div>
-      <div class="juice scale-up-ver-top-9"></div>
-      <h1 class="title">COLLECTOR</h1>
+      <div class="juice one"></div>
+      <div class="juice two"></div>
+      <div class="juice three"></div>
+      <div class="juice four"></div>
+      <div class="juice five"></div>
+      <div class="juice six"></div>
+      <h1 class="title">PIXcollector</h1>
     </div>
     <div class="description">
       <span>Successfully authorized!</span>
