--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <a class="logo" [routerLink]="['/']">
-    #PixCollector
+    #PIXcollector
   </a>
   <div class="settings" *ngIf="authorized" (click)="openMenu(SideBarTypes.MENU)">
     <span class="icon"></span>
