ui STORE test user put - update test

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -20,7 +20,7 @@
       <div class="radio">
         <input type="radio"
                id="v-all"
-               value="0"
+               value=0
                name="privacyVisible"
                formControlName="privacyVisible"
         />
@@ -31,7 +31,7 @@
       <div class="radio">
         <input type="radio"
                id="v-authorized"
-               value="1"
+               value=1
                name="privacyVisible"
                formControlName="privacyVisible"
         />
@@ -42,7 +42,7 @@
       <div class="radio">
         <input type="radio"
                id="v-nobody"
-               value="2"
+               value=2
                name="privacyVisible"
                formControlName="privacyVisible"
         />
@@ -56,7 +56,7 @@
       <div class="radio">
         <input type="radio"
                id="d-all"
-               value="0"
+               value=0
                name="privacyDownloadable"
                formControlName="privacyDownloadable"
         />
@@ -67,7 +67,7 @@
       <div class="radio">
         <input type="radio"
                id="d-authorized"
-               value="1"
+               value=1
                name="privacyDownloadable"
                formControlName="privacyDownloadable"
         />
@@ -78,7 +78,7 @@
       <div class="radio">
         <input type="radio"
                id="d-nobody"
-               value="2"
+               value=2
                name="privacyDownloadable"
                formControlName="privacyDownloadable"
         />
