--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -46,7 +46,7 @@
                name="privacyVisible"
                formControlName="privacyVisible"
         />
-        <label for="v-nobody">Nobody</label>
+        <label for="v-nobody">Only for me</label>
       </div>
     </div>
     <div class="sub-title">
@@ -83,7 +83,7 @@
                name="privacyDownloadable"
                formControlName="privacyDownloadable"
         />
-        <label for="d-nobody">Nobody</label>
+        <label for="d-nobody">Only for me</label>
       </div>
     </div>
   </div>
