ui STORE test user put - update test

--- a/ui/src/app/components/main/stocks/stocks.component.html
+++ b/ui/src/app/components/main/stocks/stocks.component.html
@@ -3,7 +3,7 @@
   <div class="sub-title">The space that bring all of the pix together.</div>
   <div class="sub-title">Enjoy watching your collection or explore other users stocks - comment, like, save, download.</div>
   <div class="stock">
-    <div class="stock-card self" (click)="goToStock(id)">
+    <div class="stock-card self" (click)="goToStock(vkId)">
       <div class="logo"> </div>
       <div class="subtitle">my stock</div>
     </div>
