--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -37,7 +37,7 @@
       <span>Successfully authorized!</span>
     </div>
     <div class="button login" [routerLink]="['/stocks']">
-      <div class="label">Go to Stock</div>
+      <div class="btn-label">Go to Stock</div>
     </div>
     <div class="bottom"> </div>
   </div>
