ui STORE test user put - update test

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -34,10 +34,10 @@
       <h1 class="title">PIXcollector</h1>
     </div>
     <div class="description">
-      <span>Successfully authorized!</span>
+      <span>Successfully authorized! <br>Transition to stock...</span>
     </div>
     <div class="button login" [routerLink]="['/stocks']">
-      <div class="btn-label">Go to Stock</div>
+      <div class="btn-label">I can't wait!</div>
     </div>
     <div class="bottom"> </div>
   </div>
