--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -21,7 +21,7 @@ header {
     font: 900 22px/26px $fontMain;
     text-decoration: none;
     color: #f839d1;
-    padding: 0 10px;
+    padding: 12px 10px;
     background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
