--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -109,10 +109,19 @@
     </div>
   </div>
 
-  <div class="main private" *ngIf="private">
-    <div class="user-info">
-      <div class="user-info-main">
-        <div class="name">Private page, sorry.</div>
+  <div class="main privacy" *ngIf="private">
+    <div class="pr pr-nobody" *ngIf="stockUser.privacyVisible === 3">
+      <div class="icon-face"></div>
+      <div class="icon-lock"></div>
+      <div class="alert">Private page, sorry.</div>
+    </div>
+
+    <div class="pr pr-authorized" *ngIf="stockUser.privacyVisible === 2">
+      <div class="icon-face"></div>
+      <div class="icon-lock"></div>
+      <div class="alert">Authorize to view this content.</div>
+      <div class="button login" [routerLink]="['/auth']">
+        <div class="btn-label">Authorize</div>
       </div>
     </div>
   </div>
