--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -251,7 +251,7 @@
               text-decoration: none;
               transition: background 100ms ease;
               box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
-              font: 500 14px/18px "Roboto", sans-serif;
+              font: 500 14px/18px $fontMain;
               text-align: center;
               color: $dark;
               span.icon {
@@ -333,6 +333,48 @@
               }
             }
           }
+        }
+      }
+    }
+
+    &.privacy {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .pr {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &.pr-nobody {}
+        &.pr-authorized {}
+
+        .icon-face {
+          cursor: pointer;
+          width: 24px;
+          height: 24px;
+          mask-image: url('../../../../assets/images/face.svg');
+          mask-size: 100%;
+          background: $background;
+        }
+        .icon-lock {
+          cursor: pointer;
+          width: 24px;
+          height: 24px;
+          mask-image: url('../../../../assets/images/lock.svg');
+          mask-size: 100%;
+          background: $background;
+        }
+        .alert {
+          font: 500 22px/24px $fontMain;
+          text-align: center;
+          color: $background;
         }
       }
     }
