--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -36,9 +36,9 @@
     <div class="description">
       <span>Successfully authorized! <br>Transition to stock...</span>
     </div>
-    <div class="button login" [routerLink]="['/stocks']">
-      <div class="btn-label">I can't wait!</div>
-    </div>
+<!--    <div class="button login" [routerLink]="['/stocks']">-->
+<!--      <div class="btn-label">I can't wait!</div>-->
+<!--    </div>-->
     <div class="bottom"> </div>
   </div>
 </div>
