--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -13,77 +13,83 @@
     <div class="title">
       <span>Privacy settings</span>
     </div>
-    <div class="sub-title">
-      <span>Visible</span>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="1"
-               type="radio"
-               id="v-all"
-               name="privacyVisible"
-               formControlName="privacyVisible"
-        />
-        <label for="v-all">All</label>
+    <div class="box-col-double">
+      <div class="col col-one">
+        <div class="sub-title">
+          <span>Visible</span>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="1"
+              type="radio"
+              id="v-all"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-all">All</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="2"
+              type="radio"
+              id="v-authorized"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-authorized">Authorized</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="3"
+              type="radio"
+              id="v-nobody"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-nobody">Only for me</label>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="2"
-               type="radio"
-               id="v-authorized"
-               name="privacyVisible"
-               formControlName="privacyVisible"
-        />
-        <label for="v-authorized">Authorized users only</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="3"
-               type="radio"
-               id="v-nobody"
-               name="privacyVisible"
-               formControlName="privacyVisible"
-        />
-        <label for="v-nobody">Only for me</label>
-      </div>
-    </div>
-    <div class="sub-title">
-      <span>Downloadable</span>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="1"
-               type="radio"
-               id="d-all"
-               value=0
-               name="privacyDownloadable"
-               formControlName="privacyDownloadable"
-        />
-        <label for="d-all">All</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="2"
-               type="radio"
-               id="d-authorized"
-               name="privacyDownloadable"
-               formControlName="privacyDownloadable"
-        />
-        <label for="d-authorized">Authorized users only</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="radio">
-        <input [value]="3"
-               type="radio"
-               id="d-nobody"
-               name="privacyDownloadable"
-               formControlName="privacyDownloadable"
-        />
-        <label for="d-nobody">Only for me</label>
+      <div class="col col-two">
+        <div class="sub-title">
+          <span>Downloadable</span>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="1"
+              type="radio"
+              id="d-all"
+              value=0
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-all">All</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="2"
+              type="radio"
+              id="d-authorized"
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-authorized">Authorized</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="3"
+              type="radio"
+              id="d-nobody"
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-nobody">Only for me</label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
