--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -48,7 +48,7 @@
               name="privacyVisible"
               formControlName="privacyVisible"
             />
-            <label for="v-nobody">Only for me</label>
+            <label for="v-nobody">Only me</label>
           </div>
         </div>
       </div>
