--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -87,7 +87,7 @@
               name="privacyDownloadable"
               formControlName="privacyDownloadable"
             />
-            <label for="d-nobody">Only for me</label>
+            <label for="d-nobody">Only me</label>
           </div>
         </div>
       </div>
